<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome"
        android:textColor="@color/white"
        android:background="@color/red"
        android:textAlignment="center"
        android:textSize="22dp"
        android:padding="10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tx_email"
            android:textColorHint="@color/red"
            android:background="@color/white"


            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tx_password"
            android:inputType="textPassword"
            android:textColorHint="@color/red"
            android:background="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_remember"
        android:layout_marginLeft="15dp"
        android:buttonTint="@color/red"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tx_login"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:backgroundTint="@color/red"
        android:layout_margin="15dp"
        />



    <TextView
        android:id="@+id/btn_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_register"
        android:autoLink="web"
        android:textSize="16dp"
        android:textAlignment="center"
        android:paddingBottom="10dp"
        />



</LinearLayout>