<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/red"
    >
   <androidx.cardview.widget.CardView
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:layout_gravity="center"
       app:cardCornerRadius="50dp"
       >
   <ImageView
       android:layout_gravity="center"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:padding="10dp"
       android:src="@drawable/ic_person"

       />
   </androidx.cardview.widget.CardView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nome"
            android:textColorHint="@color/red"
            android:background="@color/white"


            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tx_email"
            android:textColorHint="@color/red"
            android:background="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tx_password"
            android:inputType="textPassword"
            android:textColorHint="@color/red"
            android:background="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_save"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:backgroundTint="@color/red"
        android:layout_margin="15dp"
        />


</LinearLayout>

</LinearLayout>